--- a/src/main/java/Vistas/Carta.fxml
+++ b/src/main/java/Vistas/Carta.fxml
@@ -10,7 +10,6 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
@@ -72,7 +71,7 @@
             </ImageView>
          </graphic>
       </Button>
-<ScrollPane hbarPolicy="NEVER" vbarPolicy="ALWAYS" layoutX="-2.0" layoutY="57.0" prefHeight="387.0" prefWidth="600.0" style="-fx-background-color: TRANSPARENT;">
+<ScrollPane hbarPolicy="NEVER" layoutX="-2.0" layoutY="57.0" prefHeight="387.0" prefWidth="600.0" style="-fx-background-color: TRANSPARENT;" vbarPolicy="ALWAYS">
     <content>
         <AnchorPane minHeight="0.0" minWidth="0.0" prefWidth="596.0" style="-fx-background-color: #D28383;">
             <children>
@@ -100,7 +99,7 @@
                               <Font name="Insaniburger" size="20.0" />
                            </font>
                         </Button>
-                        <Button mnemonicParsing="false" prefHeight="64.0" prefWidth="255.0" style="-fx-background-color: A6234E;" text="RESERVAS">
+                        <Button mnemonicParsing="false" onAction="#Reserva" prefHeight="64.0" prefWidth="255.0" style="-fx-background-color: A6234E;" text="RESERVAS">
                            <font>
                               <Font name="Insaniburger" size="20.0" />
                            </font>
