--- a/src/main/java/Vistas/Carta.fxml
+++ b/src/main/java/Vistas/Carta.fxml
@@ -92,68 +92,48 @@
          <children>
             <ScrollPane hbarPolicy="NEVER" layoutY="-1.0" prefHeight="651.0" prefWidth="272.0">
                <content>
-                  <VBox prefHeight="900.0" prefWidth="260.0">
+                  <VBox prefHeight="767.0" prefWidth="272.0">
                      <children>
-                        <Button fx:id="Pantalla_Principal" mnemonicParsing="false" onAction="#Pantalla_Principal" prefHeight="64.0" prefWidth="255.0" style="-fx-background-color: D28383;" text="Pantalla Principal">
+                        <Button fx:id="Principal" mnemonicParsing="false" onAction="#Pantalla_Principal" prefHeight="64.0" prefWidth="272.0" style="-fx-background-color: D28383;" text="PANTALLA PRINCIPAL">
                            <font>
                               <Font name="Insaniburger" size="20.0" />
                            </font>
                         </Button>
-                        <Button mnemonicParsing="false" onAction="#Reserva" prefHeight="64.0" prefWidth="255.0" style="-fx-background-color: A6234E;" text="RESERVAS">
+                        <Button mnemonicParsing="false" onAction="#Reserva" prefHeight="64.0" prefWidth="272.0" style="-fx-background-color: A6234E;" text="RESERVAS">
                            <font>
                               <Font name="Insaniburger" size="20.0" />
                            </font>
                         </Button>
-                        <Button mnemonicParsing="false" prefHeight="64.0" prefWidth="255.0" style="-fx-background-color: D28383;" text="HORARIOS">
+                        <Button mnemonicParsing="false" prefHeight="64.0" prefWidth="275.0" style="-fx-background-color: D28383;" text="HORARIOS">
                            <font>
                               <Font name="Insaniburger" size="20.0" />
                            </font>
                         </Button>
-                        <Button mnemonicParsing="false" prefHeight="64.0" prefWidth="255.0" style="-fx-background-color: A6234E;" text="UBICACION">
+                        <Button mnemonicParsing="false" prefHeight="64.0" prefWidth="277.0" style="-fx-background-color: A6234E;" text="UBICACION">
                            <font>
                               <Font name="Insaniburger" size="20.0" />
                            </font>
                         </Button>
-                        <Button mnemonicParsing="false" prefHeight="64.0" prefWidth="255.0" style="-fx-background-color: D28383;" text="OFERTAS ESPECIALES">
-                           <font>
-                              <Font name="Insaniburger" size="20.0" />
-                           </font>
-                        </Button>
-                        <Button mnemonicParsing="false" prefHeight="64.0" prefWidth="255.0" style="-fx-background-color: A6234E;" text="CANJEAR CUPON">
-                           <font>
-                              <Font name="Insaniburger" size="20.0" />
-                           </font>
-                        </Button>
-                        <Button mnemonicParsing="false" prefHeight="64.0" prefWidth="255.0" style="-fx-background-color: D28383;" text="PERFIL">
+                        <Button mnemonicParsing="false" prefHeight="64.0" prefWidth="273.0" style="-fx-background-color: D28383;" text="PERFIL">
                            <font>
                               <Font name="Insaniburger" size="20.0" />
                            </font>
                         </Button>
                         <Accordion prefHeight="24.0" prefWidth="260.0">
                            <panes>
-                              <TitledPane animated="false" prefHeight="251.0" prefWidth="260.0" style="-fx-background-color: D28383;" text="PANEL DE CONTROL">
+                              <TitledPane animated="false" prefHeight="194.0" prefWidth="272.0" style="-fx-background-color: D28383;" text="PANEL DE CONTROL">
                                  <font>
                                     <Font name="Insaniburger" size="20.0" />
                                  </font>
                                  <content>
-                                    <VBox prefHeight="195.0" prefWidth="258.0" spacing="5.0">
+                                    <VBox prefHeight="151.0" prefWidth="270.0" spacing="5.0">
                                        <children>
-                                          <Button mnemonicParsing="false" prefHeight="64.0" prefWidth="255.0" style="-fx-background-color: FFFFFF;" text="PANEL DE CONTROL">
+                                          <Button mnemonicParsing="false" onAction="#ReservaAdmin" prefHeight="64.0" prefWidth="255.0" style="-fx-background-color: FFFFFF;" text="GESTION DE RESERVAS">
                                              <font>
                                                 <Font name="Insaniburger" size="20.0" />
                                              </font>
                                           </Button>
-                                          <Button mnemonicParsing="false" prefHeight="64.0" prefWidth="255.0" style="-fx-background-color: FFFFFF;" text="GESTION DE RESERVAS">
-                                             <font>
-                                                <Font name="Insaniburger" size="20.0" />
-                                             </font>
-                                          </Button>
-                                          <Button mnemonicParsing="false" prefHeight="64.0" prefWidth="255.0" style="-fx-background-color: FFFFFF;" text="GESTION DE MENUS">
-                                             <font>
-                                                <Font name="Insaniburger" size="20.0" />
-                                             </font>
-                                          </Button>
-                                          <Button mnemonicParsing="false" prefHeight="64.0" prefWidth="255.0" style="-fx-background-color: FFFFFF;" text="GESTION DE PRODUCTOS">
+                                          <Button mnemonicParsing="false" onAction="#Gestion_usuarios" prefHeight="64.0" prefWidth="255.0" style="-fx-background-color: FFFFFF;" text="GESTION DE USUARIOS">
                                              <font>
                                                 <Font name="Insaniburger" size="20.0" />
                                              </font>
@@ -178,90 +158,6 @@
                   </VBox>
                </content>
             </ScrollPane>
-            <VBox layoutY="5.0" prefHeight="895.0" prefWidth="272.0" visible="false">
-               <children>
-                  <Button fx:id="Principal" mnemonicParsing="false" onAction="#Pantalla_Principal" prefHeight="64.0" prefWidth="255.0" style="-fx-background-color: D28383;" text="PANTALLA PRINCIPAL">
-                     <font>
-                        <Font name="Insaniburger" size="20.0" />
-                     </font>
-                  </Button>
-                  <Button mnemonicParsing="false" onAction="#Reserva" prefHeight="64.0" prefWidth="255.0" style="-fx-background-color: A6234E;" text="RESERVAS">
-                     <font>
-                        <Font name="Insaniburger" size="20.0" />
-                     </font>
-                  </Button>
-                  <Button mnemonicParsing="false" prefHeight="64.0" prefWidth="255.0" style="-fx-background-color: D28383;" text="HORARIOS">
-                     <font>
-                        <Font name="Insaniburger" size="20.0" />
-                     </font>
-                  </Button>
-                  <Button mnemonicParsing="false" prefHeight="64.0" prefWidth="255.0" style="-fx-background-color: A6234E;" text="UBICACION">
-                     <font>
-                        <Font name="Insaniburger" size="20.0" />
-                     </font>
-                  </Button>
-                  <Button mnemonicParsing="false" prefHeight="64.0" prefWidth="255.0" style="-fx-background-color: D28383;" text="OFERTAS ESPECIALES">
-                     <font>
-                        <Font name="Insaniburger" size="20.0" />
-                     </font>
-                  </Button>
-                  <Button mnemonicParsing="false" prefHeight="64.0" prefWidth="255.0" style="-fx-background-color: A6234E;" text="CANJEAR CUPON">
-                     <font>
-                        <Font name="Insaniburger" size="20.0" />
-                     </font>
-                  </Button>
-                  <Button mnemonicParsing="false" prefHeight="64.0" prefWidth="255.0" style="-fx-background-color: D28383;" text="PERFIL">
-                     <font>
-                        <Font name="Insaniburger" size="20.0" />
-                     </font>
-                  </Button>
-                  <Accordion prefHeight="24.0" prefWidth="260.0">
-                     <panes>
-                        <TitledPane animated="false" prefHeight="251.0" prefWidth="260.0" style="-fx-background-color: D28383;" text="PANEL DE CONTROL">
-                           <font>
-                              <Font name="Insaniburger" size="20.0" />
-                           </font>
-                           <content>
-                              <VBox prefHeight="195.0" prefWidth="258.0" spacing="5.0">
-                                 <children>
-                                    <Button mnemonicParsing="false" prefHeight="64.0" prefWidth="255.0" style="-fx-background-color: FFFFFF;" text="PANEL DE CONTROL">
-                                       <font>
-                                          <Font name="Insaniburger" size="20.0" />
-                                       </font>
-                                    </Button>
-                                    <Button mnemonicParsing="false" prefHeight="64.0" prefWidth="255.0" style="-fx-background-color: FFFFFF;" text="GESTION DE RESERVAS">
-                                       <font>
-                                          <Font name="Insaniburger" size="20.0" />
-                                       </font>
-                                    </Button>
-                                    <Button mnemonicParsing="false" prefHeight="64.0" prefWidth="255.0" style="-fx-background-color: FFFFFF;" text="GESTION DE MENUS">
-                                       <font>
-                                          <Font name="Insaniburger" size="20.0" />
-                                       </font>
-                                    </Button>
-                                    <Button mnemonicParsing="false" prefHeight="64.0" prefWidth="255.0" style="-fx-background-color: FFFFFF;" text="GESTION DE PRODUCTOS">
-                                       <font>
-                                          <Font name="Insaniburger" size="20.0" />
-                                       </font>
-                                    </Button>
-                                    <Button mnemonicParsing="false" prefHeight="64.0" prefWidth="255.0" style="-fx-background-color: FFFFFF;" text="ESTADISTICAS">
-                                       <font>
-                                          <Font name="Insaniburger" size="20.0" />
-                                       </font>
-                                    </Button>
-                                    <Button mnemonicParsing="false" prefHeight="64.0" prefWidth="255.0" style="-fx-background-color: FFFFFF;" text="CONTACTAR ENCARGADO">
-                                       <font>
-                                          <Font name="Insaniburger" size="20.0" />
-                                       </font>
-                                    </Button>
-                                 </children>
-                              </VBox>
-                           </content>
-                        </TitledPane>
-                     </panes>
-                  </Accordion>
-               </children>
-            </VBox>
          </children>
       </AnchorPane>
    </children>
